[package]
name = "keksi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-signed", "cookie-private", "cookie-key-expansion"] }
axum-macros = "0.4.1"
better-panic = "0.3.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
