[package]
name = "keksi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
serde = { version = "1.0.202", features = ["derive"] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
